-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.13
-
None
-
3e1758e35d14e6ee16e30ae2f6f6bd92d29d57f0
Trying to start client encryption with an unsupported protocol seems to generate different errors on different backends.
- OpenSSL 1.0 raises SslInternalError + SslInvalidUserDataError
- Mac raises only SslInternalError
- WinRT seems to raise only SslInvalidUserDataError
| For Gerrit Dashboard: QTBUG-72196 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 247187,8 | QSsl: do not wait for 'connected'/'encrypted' if a protocol is disabled | dev | qt/qtbase | Status: MERGED | +2 | 0 |